--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,14 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Contactame</h1>
-    <script>src = "app.js"</script>
-    <h2>En el siguiente botón</h2>
+    <main>
+         <h1>Contactame</h1>
+            <script>src = "app.js"</script>
+            <h2>En el siguiente botón</h2>
+            <a>Hola</a>
+
+
+    </main>
+  
 </body>
 </html>
